[10/05] Create activation page
