# src/app/services/models.ts
@@ -2,6 +2,7 @@
 /* eslint-disable */
 export { AuthenticationRequestDto } from './models/authentication-request-dto';
 export { AuthenticationResponseDto } from './models/authentication-response-dto';
+export { RegisterRequestDto } from './models/register-request-dto';
 export { TaskDto } from './models/task-dto';
 export { TaskRequestDto } from './models/task-request-dto';
 export { UserDto } from './models/user-dto';
